First working version.

--- a/source.html
+++ b/source.html
@@ -15,33 +15,17 @@
 	<div class="header"></div>
 	<div class="main">
 		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
+			<div class="date"> <div>FEB</div> <span>26</span> </div>
 			<div class="content">
-				<h1>What is it?</h1>
+				<h1>Where is it?</h1>
 				<div class="body">
-					<p>Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW) and Signal Alignment via Genetic Algorithm (SAGA). </p>
+					<p>Time Series Classification Utility (TSCU) is freely available from <a href="https://github.com/hkayabilisim/TSCU">GitHub</a>. Majority of the code lies in just one MATLAB script: <a href="https://github.com/hkayabilisim/TSCU/blob/master/tscu.m">tscu.m</a>. However it is recommended to fetch <a href="https://github.com/hkayabilisim/TSCU">the whole repository</a> (which is about 1Mb) in order to obtain a few dependent scripts.</p>
+					<p>You can use the following command to download the repository:</p>
+					<p><blockquote>git clone https://github.com/hkayabilisim/TSCU.git</blockquote>
+					<p>This will checkout the repository into a new directory named TSCU.</p>
 				</div>
 			</div>
 		</div>
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>How does it work?</h1>
-				<div class="body">
-					<p>You should first obtain the MATLAB <a href="source.html">source code</a>. Following the <a href="documentation.html">installation guide</a>, you can run <a href="examples.html">a few examples</a> or classify your own data. </p>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>Why did you write it?</h1>
-				<div class="body">
-					<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-worl problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
-				</div>
-			</div>
-		</div>
-
 	</div>
 
 	<div class="navigation">
