--- a/documentation.html
+++ b/documentation.html
@@ -15,33 +15,23 @@
 	<div class="header"></div>
 	<div class="main">
 		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
+			<div class="date"> <div>FEB</div> <span>26</span> </div>
 			<div class="content">
-				<h1>What is it?</h1>
+				<h1>Installation</h1>
 				<div class="body">
-					<p>Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW) and Signal Alignment via Genetic Algorithm (SAGA). </p>
+					<p>After downloading <a href="source.html">the source code</a>, you should follow these steps:
+					<ul>
+						<li>In order to use the alignment methods DTW and constrained DTW, you should compile the mex file <a href="https://github.com/hkayabilisim/TSCU/blob/master/dtw.c">dtw.c</a> by issuing the following command on MATLAB:
+						<blockquote>mex dtw.c</blockquote>
+						If everyting goes well, you will have a new executable file with extension name begins with mex. In my Macbook Pro, its name is <a href="https://github.com/hkayabilisim/TSCU/blob/master/dtw.mexmaci64">dtw.mexmaci64</a>. If you have problems in compiling the mex file (you are very likely to face such problems, by the way), then you can look for compiled binaries on <a href="https://github.com/hkayabilisim/TSCU">TSCU repository</a>.</li>
+						<br />
+						<li>If you want to test the utility with the University of California, Riverise (UCR) <a href="http://www.cs.ucr.edu/~eamonn/time_series_data/">time series repository</a>, then you should request the dataset from <a href="http://www.cs.ucr.edu/~eamonn/">Eamonn Keogh</a> personally because I don't have permission to provide the dataset. I strongly suggest you to have a copy of this large and diverse dataset if you want to do detailed analysis on alignment techniques. </li>
+						<br />
+						<li>If you want to test the alignment algorithm <a href="http://www.sciencedirect.com/science/article/pii/S0020025512007955">Signal Alignment via Genetic Algorithm (SAGA)</a>, you should have Genetic Algorithm Toolbox of MATLAB. SAGA is optional, so if you don't have this toolbox, don't bother. You can still use DTW or constained DTW for alignment. </li>
+					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>How does it work?</h1>
-				<div class="body">
-					<p>You should first obtain the MATLAB <a href="source.html">source code</a>. Following the <a href="documentation.html">installation guide</a>, you can run <a href="examples.html">a few examples</a> or classify your own data. </p>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>Why did you write it?</h1>
-				<div class="body">
-					<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-worl problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
-				</div>
-			</div>
-		</div>
-
 	</div>
 
 	<div class="navigation">
