--- a/documentation.html
+++ b/documentation.html
@@ -8,6 +8,19 @@
 <meta name="author" content="HÃseyin Kaya"/> 
 <link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
 <title>Time Series Classification Utility (TSCU)</title>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38829843-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
 <div class="container">
@@ -19,6 +32,7 @@
 			<div class="content">
 				<h1>Installation</h1>
 				<div class="body">
+					<p>You can read the short manual <a href="tscu_manual.pdf">here</a> but I also prefer to highlight important tips here.</p>
 					<p>After downloading <a href="source.html">the source code</a>, you should follow these steps:
 					<ul>
 						<li>In order to use the alignment methods DTW and constrained DTW, you should compile the mex file <a href="https://github.com/hkayabilisim/TSCU/blob/master/dtw.c">dtw.c</a> by issuing the following command on MATLAB:
