--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <meta name="author" content="HÃseyin Kaya"/> 
 <link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
 <title>Time Series Classification Utility (TSCU)</title>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38829843-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
 <div class="container">
@@ -28,7 +41,7 @@
 			<div class="content">
 				<h1>How does it work?</h1>
 				<div class="body">
-					<p>You should first obtain the MATLAB <a href="source.html">source code</a>. Following the <a href="documentation.html">installation guide</a>, you can run <a href="examples.html">a few examples</a> or classify your own data. </p>
+					<p>You should first obtain the MATLAB <a href="source.html">source code</a>. Following the <a href="documentation.html">installation guide</a>, you can run <a href="examples.html">a few examples</a> or classify your own data. You may also want to take a look at <a href="tscu_manual.pdf">user manual</a>.</p>
 				</div>
 			</div>
 		</div>
