--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="content">
 				<h1>Why did you write it?</h1>
 				<div class="body">
-					<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-worl problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
+					<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-world problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
 				</div>
 			</div>
 		</div>
@@ -65,7 +65,7 @@
 			<li><a href="documentation.html">documentation</a></li>
 			<li><a href="examples.html">examples</a></li>
 		</ul>
-
+<!--
 		<h1>Alignment</h1>
 		<ul>
 			<li><a href="dtw.html">DTW</a></li>
@@ -83,6 +83,7 @@
 			<li><a href="UCR.html">UCR</a></li>
 			<li><a href="UCI.html">UCI</a></li>
 		</ul>
+-->
 	</div>
 	
 	<div class="clearer"><span></span></div>
