--- a/index.html
+++ b/index.html
@@ -1,98 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html>
-<head>
-<meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
-<meta name="description" content="Time Series Classification Utility (TSCU"/>
-<meta name="keywords" content="Time Series, Classification, MATLAB"/> 
-<meta name="author" content="HÃseyin Kaya"/> 
-<link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
-<title>Time Series Classification Utility (TSCU)</title>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-38829843-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-</head>
-<body>
-<div class="container">
-	<div class="top"> <a href="index.html"><span>Time Series Classification Utility (TSCU)</span></a> </div>
-	<div class="header"></div>
-	<div class="main">
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>What is it?</h1>
-				<div class="body">
-					<p>Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW) and Signal Alignment via Genetic Algorithm (SAGA). </p>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>How does it work?</h1>
-				<div class="body">
-					<p>You should first obtain the MATLAB <a href="source.html">source code</a>. Following the <a href="documentation.html">installation guide</a>, you can run <a href="examples.html">a few examples</a> or classify your own data. You may also want to take a look at <a href="tscu_manual.pdf">user manual</a>.</p>
-				</div>
-			</div>
-		</div>
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>23</span> </div>
-			<div class="content">
-				<h1>Why did you write it?</h1>
-				<div class="body">
-					<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-world problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<div class="navigation">
-
-		<h1>Utility</h1>
-		<ul>
-			<li><a href="source.html">source code</a></li>
-			<li><a href="documentation.html">documentation</a></li>
-			<li><a href="examples.html">examples</a></li>
-		</ul>
-<!--
-		<h1>Alignment</h1>
-		<ul>
-			<li><a href="dtw.html">DTW</a></li>
-			<li><a href="cdtw.html">Constrained DTW</a></li>
-			<li><a href="saga.html">SAGA</a></li>
-		</ul>
-
-		<h1>Classification</h1>
-		<ul>
-			<li><a href="1-NN.html">1-NN</a></li>
-		</ul>
-
-		<h1>Dataset</h1>
-		<ul>
-			<li><a href="UCR.html">UCR</a></li>
-			<li><a href="UCI.html">UCI</a></li>
-		</ul>
--->
-	</div>
-	
-	<div class="clearer"><span></span></div>
-
-	<div class="footer">&copy; 2006 <a href="index.html">Website.com</a>. Valid <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &amp; <a href="http://validator.w3.org/check?uri=referer">XHTML</a>. Template design by <a href="http://templates.arcsin.se">Arcsin</a>
-	</div>
-
-</div>
-
-</body>
-
-</html>
+html/index.html
