--- a/html/documentation.html
+++ b/html/documentation.html
@@ -1,38 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
-<meta name="description" content="Time Series Classification Utility (TSCU"/>
-<meta name="keywords" content="Time Series, Classification, MATLAB"/> 
-<meta name="author" content="HÃseyin Kaya"/> 
-<link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
+<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <title>Time Series Classification Utility (TSCU)</title>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-38829843-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-<div class="container">
-	<div class="top"> <a href="index.html"><span>Time Series Classification Utility (TSCU)</span></a> </div>
-	<div class="header"></div>
-	<div class="main">
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>26</span> </div>
-			<div class="content">
-				<h1>Installation</h1>
-				<div class="body">
-					<p>You can read the short manual <a href="tscu_manual.pdf">here</a> but I also prefer to highlight important tips here.</p>
+<div class="header">
+  <div class="header_interior"><img src="images/logo.gif" alt="Logo" width="44" height="44" style="float:left; margin-right:10px;" /> 
+  <h1 class="title">Time Series Classification Utility</h1></div>
+</div>
+<div class="content_body">
+  <div class="content_interior"><div class="left_column"><div class="navigation">
+ <ul class="markermenu">
+<li class="markermenu"><a href="index.html" >Home</a></li>
+<li class="markermenu"><a href="source.html" >Source</a></li>
+<li class="markermenu"><a href="documentation.html">Documentation</a></li>
+<li class="markermenu"><a href="examples.html">Examples</a></li>
+</ul> </div>
+
+<div class="navigationbtm"></div>
+ <br />
+ <!-- <img src="images/img-2.jpg" alt="sample 2" /> -->
+ </div>
+    <div class="right_column">
+      <h1>Installation</h1>
+
+
+	<p>You can read the short manual <a href="../doc/tscu_manual.pdf">here</a> but I also prefer to highlight important tips here.</p>
 					<p>After downloading <a href="source.html">the source code</a>, you should follow these steps:
 					<ul>
 						<li>In order to use the alignment methods DTW and constrained DTW, you should compile the mex file <a href="https://github.com/hkayabilisim/TSCU/blob/master/dtw.c">dtw.c</a> by issuing the following command on MATLAB:
@@ -43,48 +39,49 @@
 						<br />
 						<li>If you want to test the alignment algorithm <a href="http://www.sciencedirect.com/science/article/pii/S0020025512007955">Signal Alignment via Genetic Algorithm (SAGA)</a>, you should have Genetic Algorithm Toolbox of MATLAB. SAGA is optional, so if you don't have this toolbox, don't bother. You can still use DTW or constained DTW for alignment. </li>
 					</ul>
-				</div>
-			</div>
-		</div>
+
 	</div>
-
-	<div class="navigation">
-
-		<h1>Utility</h1>
-		<ul>
-			<li><a href="source.html">source code</a></li>
-			<li><a href="documentation.html">documentation</a></li>
-			<li><a href="examples.html">examples</a></li>
-		</ul>
-
+  </div>
+<br clear="all" /></div>
+<div class="footer"><div class="footer-inner">
+		
 <!--
-		<h1>Alignment</h1>
-		<ul>
-			<li><a href="dtw.html">DTW</a></li>
-			<li><a href="cdtw.html">Constrained DTW</a></li>
-			<li><a href="saga.html">SAGA</a></li>
-		</ul>
-
-		<h1>Classification</h1>
-		<ul>
-			<li><a href="1-NN.html">1-NN</a></li>
-		</ul>
-
-		<h1>Dataset</h1>
-		<ul>
-			<li><a href="UCR.html">UCR</a></li>
-			<li><a href="UCI.html">UCI</a></li>
-		</ul>
--->
-	</div>
-	
-	<div class="clearer"><span></span></div>
-
-	<div class="footer">&copy; 2006 <a href="index.html">Website.com</a>. Valid <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &amp; <a href="http://validator.w3.org/check?uri=referer">XHTML</a>. Template design by <a href="http://templates.arcsin.se">Arcsin</a>
-	</div>
-
+		<div class="footer-div"><h4>Home</h4>
+<ul>
+<li><a href="/index.html">Home</a></li>
+<li><a href="/index.html">Link 2
+</a></li>
+<li><a href="/index.html">Link 3
+</a></li>
+</ul>
 </div>
-
+    <div class="footer-div">
+      <h4>Sources</h4>
+      <ul>
+        <li><a href="/index.html">Link 1</a> </li>
+        <li><a href="/index.html">Link 2 </a> </li>
+        <li><a href="/index.html">Link 3 </a> </li>
+      </ul>
+    </div>
+    <div class="footer-div">
+      <h4>Documentation</h4>
+      <ul>
+        <li><a href="../doc/tscu_manul.pdf">Manual</a> </li>
+        <li><a href="/index.html">Link 2 </a> </li>
+        <li><a href="/index.html">Link 3 </a> </li>
+      </ul>
+    </div>
+    <div class="footer-div">
+      <h4>Examples</h4>
+      <ul>
+        <li><a href="tscu_test01.html">Test 1</a> </li>
+        <li><a href="tscu_test02.html">Test 2</a> </li>
+        <li><a href="tscu_test03.html">Test 3</a> </li>
+      </ul>
+    </div> -->
+    <br clear="all" />
+<hr width="100%"  noshade="noshade" style="border-top:1px solid #FFFFFF; border-bottom: none; margin-bottom:5px;" />
+<div style="text-align:center;">2013 Huseyin Kaya | <!-- Please don't remove -->Designed by: <a href="http://www.allfinancedirectory.com/">Finance Directory</a><!-- Thanks Again --> </div>
+</div><br clear="all" /></div>
 </body>
-
 </html>
