--- a/html/source.html
+++ b/html/source.html
@@ -1,89 +1,85 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-<meta name="description" content="Time Series Classification Utility (TSCU"/>
-<meta name="keywords" content="Time Series, Classification, MATLAB"/> 
-<meta name="author" content="Hüseyin Kaya"/> 
-<link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
 <title>Time Series Classification Utility (TSCU)</title>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-38829843-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-<div class="container">
-	<div class="top"> <a href="index.html"><span>Time Series Classification Utility (TSCU)</span></a> </div>
-	<div class="header"></div>
-	<div class="main">
-		<div class="item">
-			<div class="date"> <div>FEB</div> <span>26</span> </div>
-			<div class="content">
-				<h1>Where is it?</h1>
-				<div class="body">
-					<p>Time Series Classification Utility (TSCU) is freely available from <a href="https://github.com/hkayabilisim/TSCU">GitHub</a>. Majority of the code lies in just one MATLAB script: <a href="https://github.com/hkayabilisim/TSCU/blob/master/tscu.m">tscu.m</a>. However it is recommended to fetch <a href="https://github.com/hkayabilisim/TSCU">the whole repository</a> (which is about 1Mb) in order to obtain a few dependent scripts.</p>
-					<p>You can use the following command to download the repository:</p>
-					<p><blockquote>git clone https://github.com/hkayabilisim/TSCU.git</blockquote>
-					<p>This will checkout the repository into a new directory named TSCU.</p>
-				</div>
-				<h1>Reference</h1>
-				<div class="body">
-					<p>If you used TSCU and want to give a reference to it, please use the following publication:</p>
-					<blockquote>
-						Hüseyin Kaya and Şule Gündüz-Öğüdücü. SAGA: A novel signal alignment method based on genetic algorithm. Information Sciences, 228(0):113 - 130, 2013.
-					</blockquote>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="navigation">
-
-		<h1>Utility</h1>
-		<ul>
-			<li><a href="source.html">source code</a></li>
-			<li><a href="documentation.html">documentation</a></li>
-			<li><a href="examples.html">examples</a></li>
-		</ul>
-<!--
-		<h1>Alignment</h1>
-		<ul>
-			<li><a href="dtw.html">DTW</a></li>
-			<li><a href="cdtw.html">Constrained DTW</a></li>
-			<li><a href="saga.html">SAGA</a></li>
-		</ul>
-
-		<h1>Classification</h1>
-		<ul>
-			<li><a href="1-NN.html">1-NN</a></li>
-		</ul>
-
-		<h1>Dataset</h1>
-		<ul>
-			<li><a href="UCR.html">UCR</a></li>
-			<li><a href="UCI.html">UCI</a></li>
-		</ul>
--->
-	</div>
-	
-	<div class="clearer"><span></span></div>
-
-	<div class="footer">&copy; 2006 <a href="index.html">Website.com</a>. Valid <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &amp; <a href="http://validator.w3.org/check?uri=referer">XHTML</a>. Template design by <a href="http://templates.arcsin.se">Arcsin</a>
-	</div>
-
+<div class="header">
+  <div class="header_interior"><img src="images/logo.gif" alt="Logo" width="44" height="44" style="float:left; margin-right:10px;" /> 
+  <h1 class="title">Time Series Classification Utility</h1></div>
 </div>
+<div class="content_body">
+  <div class="content_interior"><div class="left_column"><div class="navigation">
+ <ul class="markermenu">
+<li class="markermenu"><a href="index.html" >Home</a></li>
+<li class="markermenu"><a href="source.html" >Source</a></li>
+<li class="markermenu"><a href="documentation.html">Documentation</a></li>
+<li class="markermenu"><a href="examples.html">Examples</a></li>
+</ul> </div>
 
+<div class="navigationbtm"></div>
+ <br />
+ <!-- <img src="images/img-2.jpg" alt="sample 2" /> -->
+ </div>
+    <div class="right_column">
+      <h1>Where is it?</h1>
+ <p>Time Series Classification Utility (TSCU) is freely available from <a href="https://github.com/hkayabilisim/TSCU">GitHub</a>. Majority of the code lies in just one MATLAB script: <a href="https://github.com/hkayabilisim/TSCU/blob/master/tscu.m">tscu.m</a>. However it is recommended to fetch <a href="https://github.com/hkayabilisim/TSCU">the whole repository</a> (which is about 1Mb) in order to obtain a few dependent scripts.</p>
+                                        <p>You can use the following command to download the repository:</p>
+                                        <p><blockquote>git clone https://github.com/hkayabilisim/TSCU.git</blockquote>
+                                    <p>This will checkout the repository into a new directory named TSCU.</p>
+
+		<div class="hr"></div>
+		<h2>Reference</h2>
+<p>If you used TSCU and want to give a reference to it, please use the following publication:</p>
+                                        <blockquote>
+					Huseyin Kaya and Sule Gunduz Oguducu,
+					SAGA: A novel signal alignment method based on genetic algorithm. Information Sciences, 228(0):113 - 130, 2013.
+                                        </blockquote>
+	</div>
+  </div>
+<br clear="all" /></div>
+<div class="footer"><div class="footer-inner">
+		
+<!--
+		<div class="footer-div"><h4>Home</h4>
+<ul>
+<li><a href="/index.html">Home</a></li>
+<li><a href="/index.html">Link 2
+</a></li>
+<li><a href="/index.html">Link 3
+</a></li>
+</ul>
+</div>
+    <div class="footer-div">
+      <h4>Sources</h4>
+      <ul>
+        <li><a href="/index.html">Link 1</a> </li>
+        <li><a href="/index.html">Link 2 </a> </li>
+        <li><a href="/index.html">Link 3 </a> </li>
+      </ul>
+    </div>
+    <div class="footer-div">
+      <h4>Documentation</h4>
+      <ul>
+        <li><a href="../doc/tscu_manul.pdf">Manual</a> </li>
+        <li><a href="/index.html">Link 2 </a> </li>
+        <li><a href="/index.html">Link 3 </a> </li>
+      </ul>
+    </div>
+    <div class="footer-div">
+      <h4>Examples</h4>
+      <ul>
+        <li><a href="tscu_test01.html">Test 1</a> </li>
+        <li><a href="tscu_test02.html">Test 2</a> </li>
+        <li><a href="tscu_test03.html">Test 3</a> </li>
+      </ul>
+    </div> -->
+    <br clear="all" />
+<hr width="100%"  noshade="noshade" style="border-top:1px solid #FFFFFF; border-bottom: none; margin-bottom:5px;" />
+<div style="text-align:center;">2013 Huseyin Kaya | <!-- Please don't remove -->Designed by: <a href="http://www.allfinancedirectory.com/">Finance Directory</a><!-- Thanks Again --> </div>
+</div><br clear="all" /></div>
 </body>
-
 </html>
