--- a/html/index.html
+++ b/html/index.html
@@ -25,17 +25,12 @@
  <!-- <img src="images/img-2.jpg" alt="sample 2" /> -->
  </div>
     <div class="right_column">
-      <h1>What is it?</h1>
 	<p>Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW) and Signal Alignment via Genetic Algorithm (SAGA). </p>
+	<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-world problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
 		<div class="hr"></div>
-		<h2>How does it work?
-        </h2>
+		<h1>Instructions</h1>
 		<p>You should first obtain the MATLAB <a href="source.html">source code</a>. Following the <a href="documentation.html">installation guide</a>, you can run <a href="examples.html">a few examples</a> or classify your own data. You may also want to take a look at <a href="tscu_manual.pdf">user manual</a>.</p>
 		<div class="hr"></div>
-		<h2>Why did you write?
-
-        </h2>
-		<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-world problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
 	</div>
   </div>
 <br clear="all" /></div>
