--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-html/index.html
+<html>
+	<head>
+		<meta http-equiv="Refresh" content="0; url=html/" />
+	</head>
+	<body>
+		<p>Please follow <a href="http://web.itu.edu.tr/~huseyinkaya/tscu/html/">this link</a>.</p>
+	</body>
+</html>
