--- a/html/examples.html
+++ b/html/examples.html
@@ -18,20 +18,26 @@
 <li class="markermenu"><a href="source.html" >Source</a></li>
 <li class="markermenu"><a href="documentation.html">Documentation</a></li>
 <li class="markermenu"><a href="examples.html">Examples</a></li>
-</ul> </div>
+</ul>
+<img width="100%" src="images/SAGA-mapping.png" align="center" />
+</div>
 
 <div class="navigationbtm"></div>
  <br />
  <!-- <img src="images/img-2.jpg" alt="sample 2" /> -->
  </div>
     <div class="right_column">
-	<h1><a href="tscu_test01.html">tscu_test01.m</a></h1>
-	<p>Synthetic Control Dataset with default options. </p>
-	<h1><a href="tscu_test02.html">tscu_test02.m</a></h1>
-	<p>Same as test01 but with DTW alignment.</p>
-	<h1><a href="tscu_test03.html">tscu_test03.m</a></h1>
-	<p>Same as test02 but with parallel processing.</p>
-
+	    <ul>
+		    <li><a href="tscu_test01.html">tscu_test01.m</a>: Toy example with default options</li>
+		    <li><a href="tscu_test02.html">tscu_test02.m</a>: Displaying input data</li>
+		    <li><a href="tscu_test03.html">tscu_test03.m</a>: Using DTW</li>
+		    <li><a href="tscu_test04.html">tscu_test04.m</a>: Displaying alignments</li>
+		    <li><a href="tscu_test05.html">tscu_test05.m</a>: Using SAGA</li>
+		    <li><a href="tscu_test06.html">tscu_test06.m</a>: Changing cost function in SAGA</li>
+		    <li><a href="tscu_test07.html">tscu_test07.m</a>: Chaning log level</li>
+		    <li><a href="tscu_test08.html">tscu_test08.m</a>: Parallel processing</li>
+		    <li><a href="tscu_test09.html">tscu_test09.m</a>: Using constrained DTW</li>
+	    </ul>
 	</div>
   </div>
 <br clear="all" /></div>
