--- a/html/index.html
+++ b/html/index.html
@@ -18,13 +18,16 @@
 <li class="markermenu"><a href="source.html" >Source</a></li>
 <li class="markermenu"><a href="documentation.html">Documentation</a></li>
 <li class="markermenu"><a href="examples.html">Examples</a></li>
-</ul> </div>
+</ul> 
+<img width="100%" src="images/SAGA-mapping.png" align="center" />
+</div>
 
 <div class="navigationbtm"></div>
  <br />
  <!-- <img src="images/img-2.jpg" alt="sample 2" /> -->
  </div>
     <div class="right_column">
+	<img width="150px" src="images/SAGA-path.png" align="right" />
 	<p>Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW) and Signal Alignment via Genetic Algorithm (SAGA). </p>
 	<p>I decided to prepare Time Series Classification Utility (TSCU) during my Ph.D which is about a new time series alignment algorithm  and its application to various real-world problems. There were (and there are still) a bunch of useful tools for time series alignment, but none of them seemed general enough. I also wanted to create a useful website so that people searching for a time series classification task will find all crucial information quickly. </p>
 		<div class="hr"></div>
