--- a/html/source.html
+++ b/html/source.html
@@ -18,7 +18,9 @@
 <li class="markermenu"><a href="source.html" >Source</a></li>
 <li class="markermenu"><a href="documentation.html">Documentation</a></li>
 <li class="markermenu"><a href="examples.html">Examples</a></li>
-</ul> </div>
+</ul>
+<img width="100%" src="images/SAGA-mapping.png" align="center" />
+</div>
 
 <div class="navigationbtm"></div>
  <br />
