Ghostscript should be installed on your system if you want to produce PDF files by using the related options of TSCU.

--- a/html/documentation.html
+++ b/html/documentation.html
@@ -40,6 +40,8 @@
 						<li>If you want to test the utility with the University of California, Riverise (UCR) <a href="http://www.cs.ucr.edu/~eamonn/time_series_data/">time series repository</a>, then you should request the dataset from <a href="http://www.cs.ucr.edu/~eamonn/">Eamonn Keogh</a> personally because I don't have permission to provide the dataset. I strongly suggest you to have a copy of this large and diverse dataset if you want to do detailed analysis on alignment techniques. </li>
 						<br />
 						<li>If you want to test the alignment algorithm <a href="http://www.sciencedirect.com/science/article/pii/S0020025512007955">Signal Alignment via Genetic Algorithm (SAGA)</a>, you should have Genetic Algorithm Toolbox of MATLAB. SAGA is optional, so if you don't have this toolbox, don't bother. You can still use DTW or constained DTW for alignment. </li>
+						<br />
+						<li>The utility creates some PDF files when using some of the options. In order to produce nicely cropped PDF, I use a small utility called export_fig which depends on Ghostscript. So you may need to install Ghostscript from <a href="http://www.ghostscript.com">Ghostscript</a> especially for Windows architecture.</li>
 					</ul>
 
 	</div>
