Website URL was updated.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<meta http-equiv="Refresh" content="0; url=html/" />
 	</head>
 	<body>
-		<p>Please follow <a href="http://web.itu.edu.tr/~huseyinkaya/tscu/html/">this link</a>.</p>
+		<p>Please follow <a href="http://tscu.blogspot.com">this link</a>.</p>
 	</body>
 </html>
