--- a/html/tscu_test08.html
+++ b/html/tscu_test08.html
@@ -66,7 +66,7 @@ p.footer {
 close <span class="string">all</span>
 clc
 </pre><h2>Parallel processing<a name="2"></a></h2><p>In order to use parallel processing, you have to have MATLAB parallel toolbox which I have in our Istanbul Technical University. I used one of the UCR datasets which I didn't include in the package. But here I show you how I did the calculations.</p><h2>Loading data<a name="3"></a></h2><p>I loaded the UCR data as follows:</p><pre>  trn=load('../../UCR/DiatomSizeReduction/DiatomSizeReduction_TRAIN');
-  tst=load('../../UCR/DiatomSizeReduction/DiatomSizeReduction_TEST');</pre><h2>Running in parallel<a name="4"></a></h2><p>Then I run the program for difference number of processor. The karadeniz_XX is the name of the pool I defined in the MATLAB parallel toolbox.</p><pre>  tscu(trn,tst,'Alignment','SAGA','MATLABPool','karadeniz_64');
+  tst=load('../../UCR/DiatomSizeReduction/DiatomSizeReduction_TEST');</pre><h2>Running in parallel<a name="4"></a></h2><p>Then I run the program for difference number of processor. The karadeniz_XX is the name of the pool I defined in the MATLAB parallel toolbox.</p><pre class="codeinput">  tscu(trn,tst,'Alignment','SAGA','MATLABPool','karadeniz_64');
   tscu(trn,tst,'Alignment','SAGA','MATLABPool','karadeniz_32');
   tscu(trn,tst,'Alignment','SAGA','MATLABPool','karadeniz_16');
   tscu(trn,tst,'Alignment','SAGA','MATLABPool','karadeniz_8');
