--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 <p>
 Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW), Curve Registration (CREG) and Signal Alignment via Genetic Algorithm (SAGA).
 </p>
+<p>Author: Huseyin Kaya, Istanbul Technical University, Informatics Institute</p>
 
 <ul>
-	<li><a href="doc/pdf/tscu_tutorial.pdf">Tutorial (PDF)</a></li>
 	<li><a href="doc/html/tscu_tutorial.html">Tutorial (HTML)</a></li>
+	<li><a href="doc/pdf/tscu_tutorial.pdf">Tutorial (PDF)</a></li>
 	<li><a href="https://github.com/hkayabilisim/TSCU.git">Sources</a></li>
 </ul>
-
+<h2>Related Links</h2>
+<ul>
+	<li><a href="http://www.psych.mcgill.ca/misc/fda/">Functional Data Analysis</a> web site of Jim Ramsay</li>
+	<li><a href="http://youtu.be/tqL8Zjz7oJo">Dynamic Time Warping in 77 seconds</a></li>
+	<li><a href="http://www.cs.ucr.edu/~eamonn/time_series_data/">UCR Time Series Classification/Clustering Page</a></li>
+</ul>
 </body>
 </html>
 
