--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Time Series Classification Utility (TSCU) is a simple MATLAB program that you ca
 </ul>
 <h2>Related Links</h2>
 <ul>
+	<li><a href="doc/avi/tscu_test_taylor_movie.avi">Taylor approximation in TSCU</a></li>
 	<li><a href="http://www.psych.mcgill.ca/misc/fda/">Functional Data Analysis</a> web site of Jim Ramsay</li>
 	<li><a href="http://youtu.be/tqL8Zjz7oJo">Dynamic Time Warping in 77 seconds</a></li>
 	<li><a href="http://www.cs.ucr.edu/~eamonn/time_series_data/">UCR Time Series Classification/Clustering Page</a></li>
