web page updates

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@ Time Series Classification Utility (TSCU) is a simple MATLAB program that you ca
 	<li><a href="doc/html/tscu_tutorial.html">Tutorial (HTML)</a></li>
 	<li><a href="doc/pdf/tscu_tutorial.pdf">Tutorial (PDF)</a></li>
 	<li><a href="https://github.com/hkayabilisim/TSCU.git">Sources</a></li>
+	<li><a href="doc/html/tscu.html">tscu.m (published HTML)</a></li>
 </ul>
 <h2>Related Links</h2>
 <ul>
-	<li><a href="doc/avi/tscu_test_taylor_movie.avi">Taylor approximation in TSCU</a></li>
 	<li><a href="http://www.psych.mcgill.ca/misc/fda/">Functional Data Analysis</a> web site of Jim Ramsay</li>
 	<li><a href="http://youtu.be/tqL8Zjz7oJo">Dynamic Time Warping in 77 seconds</a></li>
 	<li><a href="http://www.cs.ucr.edu/~eamonn/time_series_data/">UCR Time Series Classification/Clustering Page</a></li>
+	<li><a href="doc/avi/tscu_test_taylor_movie.avi">Taylor approximation in TSCU</a></li>
 </ul>
 </body>
 </html>
