--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+<script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-51925957-1', 'timewarping.org'); ga('require', 'displayfeatures'); ga('send', 'pageview'); </script>
 		<title>Time Series Classification Utility</title>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-51925957-1', 'timewarping.org');
-  ga('send', 'pageview');
-
-</script>
 	</head>
 <body>
 <h1>Time Series Classiciation Utility</h1>
@@ -24,7 +15,7 @@ Time Series Classification Utility (TSCU) is a simple MATLAB program that you ca
 	<li><a href="doc/html/tscu_tutorial.html">Tutorial (HTML)</a></li>
 	<li><a href="doc/pdf/tscu_tutorial.pdf">Tutorial (PDF)</a></li>
 	<li><a href="https://github.com/hkayabilisim/TSCU.git">Sources</a></li>
-	<li><a href="doc/html/tscu.html">tscu.m (published HTML)</a></li>
+	<li><a href="doc/html/tscu.html">tscu.m (HTML)</a></li>
 </ul>
 <h2>Related Links</h2>
 <ul>
