Table II of Gudmundsson, Steinn, "Support vector machines and dynamic time warping for time series" 2008 is recreated.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ Time Series Classification Utility (TSCU) is a simple MATLAB program that you ca
 <ul>
 	<li><a href="doc/html/tscu_tutorial.html">Tutorial (HTML)</a></li>
 	<li><a href="doc/html/tscu_tutorialSVM.html">SVM in TSCU tutorial (HTML)</a></li>
+	<li><a href="doc/html/tscu_justifyGudmundsson.html">Validation of TSCU</a></li>
 	<li><a href="https://github.com/hkayabilisim/TSCU.git">Sources</a></li>
 </ul>
 <h2>Related Links</h2>
