--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <p>
 Time Series Classification Utility (TSCU) is a simple MATLAB program that you can use it to classify time series by choosing a couple of alignment methods including Dynamic Time Warping (DTW), Constrained DTW (CDTW), Curve Registration (CREG) and Signal Alignment via Genetic Algorithm (SAGA).
 </p>
+<p>f you use this software for academic research, please cite the reference:
+H.Kaya, S. Gunduz-Oguducu, A distance based time series classification framework, (2015), <a href="http://dx.doi.org/10.1016/j.is.2015.02.005">http://dx.doi.org/10.1016/j.is.2015.02.005</a>
+For commercial use of this toolbox, please contact the authors.</p>
 <p>Author: Huseyin Kaya, Istanbul Technical University, Informatics Institute</p>
 
 <ul>
@@ -20,7 +23,6 @@ Time Series Classification Utility (TSCU) is a simple MATLAB program that you ca
 <h2>Related Links</h2>
 <ul>
 	<li><a href="http://www.psych.mcgill.ca/misc/fda/">Functional Data Analysis</a> web site of Jim Ramsay</li>
-	<li><a href="http://youtu.be/tqL8Zjz7oJo">Dynamic Time Warping in 77 seconds</a></li>
 	<li><a href="http://www.cs.ucr.edu/~eamonn/time_series_data/">UCR Time Series Classification/Clustering Page</a></li>
 	<li><a href="doc/avi/tscu_test_taylor_movie.avi">Taylor approximation in TSCU</a></li>
 </ul>
